src/generated/TerraformParser.ts
// Generated from Terraform.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { TerraformListener } from "./TerraformListener";
import { TerraformVisitor } from "./TerraformVisitor";


export class TerraformParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly VARIABLE = 30;
	public static readonly PROVIDER = 31;
	public static readonly IN = 32;
	public static readonly STAR = 33;
	public static readonly DOT = 34;
	public static readonly LCURL = 35;
	public static readonly RCURL = 36;
	public static readonly LPAREN = 37;
	public static readonly RPAREN = 38;
	public static readonly EOF_ = 39;
	public static readonly NULL_ = 40;
	public static readonly NATURAL_NUMBER = 41;
	public static readonly BOOL = 42;
	public static readonly DESCRIPTION = 43;
	public static readonly MULTILINESTRING = 44;
	public static readonly STRING = 45;
	public static readonly IDENTIFIER = 46;
	public static readonly COMMENT = 47;
	public static readonly BLOCKCOMMENT = 48;
	public static readonly WS = 49;
	public static readonly RULE_file_ = 0;
	public static readonly RULE_terraform = 1;
	public static readonly RULE_resource = 2;
	public static readonly RULE_data = 3;
	public static readonly RULE_provider = 4;
	public static readonly RULE_output = 5;
	public static readonly RULE_local = 6;
	public static readonly RULE_module = 7;
	public static readonly RULE_variable = 8;
	public static readonly RULE_block = 9;
	public static readonly RULE_blocktype = 10;
	public static readonly RULE_resourcetype = 11;
	public static readonly RULE_name = 12;
	public static readonly RULE_label = 13;
	public static readonly RULE_blockbody = 14;
	public static readonly RULE_argument = 15;
	public static readonly RULE_identifier = 16;
	public static readonly RULE_identifierchain = 17;
	public static readonly RULE_inline_index = 18;
	public static readonly RULE_expression = 19;
	public static readonly RULE_forloop = 20;
	public static readonly RULE_section = 21;
	public static readonly RULE_val = 22;
	public static readonly RULE_functioncall = 23;
	public static readonly RULE_functionname = 24;
	public static readonly RULE_functionarguments = 25;
	public static readonly RULE_index = 26;
	public static readonly RULE_filedecl = 27;
	public static readonly RULE_list_ = 28;
	public static readonly RULE_map_ = 29;
	public static readonly RULE_string = 30;
	public static readonly RULE_signed_number = 31;
	public static readonly RULE_operator_ = 32;
	public static readonly RULE_number = 33;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file_", "terraform", "resource", "data", "provider", "output", "local", 
		"module", "variable", "block", "blocktype", "resourcetype", "name", "label", 
		"blockbody", "argument", "identifier", "identifierchain", "inline_index", 
		"expression", "forloop", "section", "val", "functioncall", "functionname", 
		"functionarguments", "index", "filedecl", "list_", "map_", "string", "signed_number", 
		"operator_", "number",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'terraform'", "'resource'", "'data'", "'output'", "'locals'", 
		"'module'", "'='", "'local'", "'var'", "'?'", "':'", "'for'", "'jsonencode'", 
		"','", "'['", "']'", "'file'", "'+'", "'-'", "'/'", "'%'", "'>'", "'>='", 
		"'<'", "'<='", "'=='", "'!='", "'&&'", "'||'", "'variable'", "'provider'", 
		"'in'", "'*'", "'.'", "'{'", "'}'", "'('", "')'", undefined, "'nul'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "VARIABLE", "PROVIDER", "IN", "STAR", "DOT", "LCURL", 
		"RCURL", "LPAREN", "RPAREN", "EOF_", "NULL_", "NATURAL_NUMBER", "BOOL", 
		"DESCRIPTION", "MULTILINESTRING", "STRING", "IDENTIFIER", "COMMENT", "BLOCKCOMMENT", 
		"WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(TerraformParser._LITERAL_NAMES, TerraformParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return TerraformParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Terraform.g4"; }

	// @Override
	public get ruleNames(): string[] { return TerraformParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return TerraformParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(TerraformParser._ATN, this);
	}
	// @RuleVersion(0)
	public file_(): File_Context {
		let _localctx: File_Context = new File_Context(this._ctx, this.state);
		this.enterRule(_localctx, 0, TerraformParser.RULE_file_);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 76;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 76;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case TerraformParser.T__4:
					{
					this.state = 68;
					this.local();
					}
					break;
				case TerraformParser.T__5:
					{
					this.state = 69;
					this.module();
					}
					break;
				case TerraformParser.T__3:
					{
					this.state = 70;
					this.output();
					}
					break;
				case TerraformParser.PROVIDER:
					{
					this.state = 71;
					this.provider();
					}
					break;
				case TerraformParser.VARIABLE:
					{
					this.state = 72;
					this.variable();
					}
					break;
				case TerraformParser.T__2:
					{
					this.state = 73;
					this.data();
					}
					break;
				case TerraformParser.T__1:
					{
					this.state = 74;
					this.resource();
					}
					break;
				case TerraformParser.T__0:
					{
					this.state = 75;
					this.terraform();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 78;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TerraformParser.T__0) | (1 << TerraformParser.T__1) | (1 << TerraformParser.T__2) | (1 << TerraformParser.T__3) | (1 << TerraformParser.T__4) | (1 << TerraformParser.T__5) | (1 << TerraformParser.VARIABLE) | (1 << TerraformParser.PROVIDER))) !== 0));
			this.state = 80;
			this.match(TerraformParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public terraform(): TerraformContext {
		let _localctx: TerraformContext = new TerraformContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, TerraformParser.RULE_terraform);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			this.match(TerraformParser.T__0);
			this.state = 83;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public resource(): ResourceContext {
		let _localctx: ResourceContext = new ResourceContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, TerraformParser.RULE_resource);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 85;
			this.match(TerraformParser.T__1);
			this.state = 86;
			this.resourcetype();
			this.state = 87;
			this.name();
			this.state = 88;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public data(): DataContext {
		let _localctx: DataContext = new DataContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, TerraformParser.RULE_data);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 90;
			this.match(TerraformParser.T__2);
			this.state = 91;
			this.resourcetype();
			this.state = 92;
			this.name();
			this.state = 93;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public provider(): ProviderContext {
		let _localctx: ProviderContext = new ProviderContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, TerraformParser.RULE_provider);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 95;
			this.match(TerraformParser.PROVIDER);
			this.state = 96;
			this.resourcetype();
			this.state = 97;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public output(): OutputContext {
		let _localctx: OutputContext = new OutputContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, TerraformParser.RULE_output);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 99;
			this.match(TerraformParser.T__3);
			this.state = 100;
			this.name();
			this.state = 101;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public local(): LocalContext {
		let _localctx: LocalContext = new LocalContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, TerraformParser.RULE_local);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 103;
			this.match(TerraformParser.T__4);
			this.state = 104;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public module(): ModuleContext {
		let _localctx: ModuleContext = new ModuleContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, TerraformParser.RULE_module);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 106;
			this.match(TerraformParser.T__5);
			this.state = 107;
			this.name();
			this.state = 108;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variable(): VariableContext {
		let _localctx: VariableContext = new VariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, TerraformParser.RULE_variable);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this.match(TerraformParser.VARIABLE);
			this.state = 111;
			this.name();
			this.state = 112;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, TerraformParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this.blocktype();
			this.state = 118;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === TerraformParser.STRING) {
				{
				{
				this.state = 115;
				this.label();
				}
				}
				this.state = 120;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 121;
			this.blockbody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public blocktype(): BlocktypeContext {
		let _localctx: BlocktypeContext = new BlocktypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, TerraformParser.RULE_blocktype);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(TerraformParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public resourcetype(): ResourcetypeContext {
		let _localctx: ResourcetypeContext = new ResourcetypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, TerraformParser.RULE_resourcetype);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			this.match(TerraformParser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public name(): NameContext {
		let _localctx: NameContext = new NameContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, TerraformParser.RULE_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.match(TerraformParser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let _localctx: LabelContext = new LabelContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, TerraformParser.RULE_label);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this.match(TerraformParser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public blockbody(): BlockbodyContext {
		let _localctx: BlockbodyContext = new BlockbodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, TerraformParser.RULE_blockbody);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 131;
			this.match(TerraformParser.LCURL);
			this.state = 136;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TerraformParser.T__2) | (1 << TerraformParser.T__5) | (1 << TerraformParser.T__7) | (1 << TerraformParser.T__8) | (1 << TerraformParser.VARIABLE) | (1 << TerraformParser.PROVIDER))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (TerraformParser.IN - 32)) | (1 << (TerraformParser.STAR - 32)) | (1 << (TerraformParser.NATURAL_NUMBER - 32)) | (1 << (TerraformParser.IDENTIFIER - 32)))) !== 0)) {
				{
				this.state = 134;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
				case 1:
					{
					this.state = 132;
					this.argument();
					}
					break;

				case 2:
					{
					this.state = 133;
					this.block();
					}
					break;
				}
				}
				this.state = 138;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 139;
			this.match(TerraformParser.RCURL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public argument(): ArgumentContext {
		let _localctx: ArgumentContext = new ArgumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, TerraformParser.RULE_argument);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 141;
			this.identifier();
			this.state = 142;
			this.match(TerraformParser.T__6);
			this.state = 143;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let _localctx: IdentifierContext = new IdentifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, TerraformParser.RULE_identifier);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TerraformParser.T__2) | (1 << TerraformParser.T__5) | (1 << TerraformParser.T__7) | (1 << TerraformParser.T__8))) !== 0)) {
				{
				this.state = 145;
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TerraformParser.T__2) | (1 << TerraformParser.T__5) | (1 << TerraformParser.T__7) | (1 << TerraformParser.T__8))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 146;
				this.match(TerraformParser.DOT);
				}
			}

			this.state = 149;
			this.identifierchain();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public identifierchain(): IdentifierchainContext {
		let _localctx: IdentifierchainContext = new IdentifierchainContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, TerraformParser.RULE_identifierchain);
		let _la: number;
		try {
			let _alt: number;
			this.state = 178;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case TerraformParser.VARIABLE:
			case TerraformParser.PROVIDER:
			case TerraformParser.IN:
			case TerraformParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 151;
				_la = this._input.LA(1);
				if (!(((((_la - 30)) & ~0x1F) === 0 && ((1 << (_la - 30)) & ((1 << (TerraformParser.VARIABLE - 30)) | (1 << (TerraformParser.PROVIDER - 30)) | (1 << (TerraformParser.IN - 30)) | (1 << (TerraformParser.IDENTIFIER - 30)))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 153;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
				case 1:
					{
					this.state = 152;
					this.index();
					}
					break;
				}
				this.state = 159;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 155;
						this.match(TerraformParser.DOT);
						this.state = 156;
						this.identifierchain();
						}
						}
					}
					this.state = 161;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
				}
				}
				break;
			case TerraformParser.STAR:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 162;
				this.match(TerraformParser.STAR);
				this.state = 167;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 163;
						this.match(TerraformParser.DOT);
						this.state = 164;
						this.identifierchain();
						}
						}
					}
					this.state = 169;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
				}
				}
				break;
			case TerraformParser.NATURAL_NUMBER:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 170;
				this.inline_index();
				this.state = 175;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 171;
						this.match(TerraformParser.DOT);
						this.state = 172;
						this.identifierchain();
						}
						}
					}
					this.state = 177;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inline_index(): Inline_indexContext {
		let _localctx: Inline_indexContext = new Inline_indexContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, TerraformParser.RULE_inline_index);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.match(TerraformParser.NATURAL_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}
